--- a/Demos/WebSecurity/index.html
+++ b/Demos/WebSecurity/index.html
@@ -109,7 +109,7 @@
 				<section>
 					<h3>sql注入预防方法</h3>
 					<p class="fragment">参数化查询</p>
-					<img class="fragment" style="width:70%;" src="images/param2.png">
+					<img class="fragment" style="width:70%;" src="images/paramM.png">
 					<p class="fragment">实质：进行了参数过滤，将不符合sql语法的语句过滤出来，针对不同的sql语句执行不同的处理</p>	
 				</section>
 
